Added issue tracker url

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -7,7 +7,7 @@ loaderVersion="[31,)"
 	version="${file.jarVersion}"
 	displayName="Pick Pick"
 	displayURL="https://www.curseforge.com/minecraft/mc-mods/pick-pick"
-	issueTrackerUrl=""
+	issueTrackerUrl="https://github.com/kregerl/PickPick/issues"
 	logoFile="PickPickLogo.png" 
 	credits=""
 	authors="AreUThreateningMe"
