--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,4 +1,3 @@
-
 modLoader="javafml"
 loaderVersion="[31,)"
 
@@ -14,13 +13,13 @@ loaderVersion="[31,)"
 	description='''
 	Adds a pick tool feature that is similar to vanilla pick block, but instead of swapping items it places the correct tool in your hotbar.
 	'''
-[[dependencies.examplemod]] #optional
+[[dependencies.pickpick]] #optional
     modId="forge"
     mandatory=true
-    versionRange="[31,)" #mandatory
+    versionRange="[31,)"
     ordering="AFTER"
     side="BOTH"
-[[dependencies.examplemod]]
+[[dependencies.pickpick]]
     modId="minecraft"
     mandatory=true
     versionRange="[1.15.2]"
