--- a/build.gradle
+++ b/build.gradle
@@ -13,9 +13,9 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
-version = '1.0.9'
+version = '1.1.1'
 group = 'com.loucaskreger.pickpick' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = 'pickpick-1.16.1'
+archivesBaseName = 'pickpick-1.16.X'
 
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 
